added functions
