# ci-wrappers/pythonpreview/wrapper/swagger_server/controllers/device_controller.py
@@ -6,9 +6,6 @@ from swagger_server.models.connect_response import ConnectResponse  # noqa: E501
 from swagger_server.models.roundtrip_method_call_body import RoundtripMethodCallBody  # noqa: E501
 from swagger_server import util
 
-# Added 2 lines in merge
-from device_glue import DeviceGlue
-device_glue = DeviceGlue()
 
 def device_connect(transportType, connectionString, caCertificate=None):  # noqa: E501
     """Connect to the azure IoT Hub as a device
@@ -26,8 +23,7 @@ def device_connect(transportType, connectionString, caCertificate=None):  # noqa
     """
     if connexion.request.is_json:
         caCertificate = Certificate.from_dict(connexion.request.get_json())  # noqa: E501
-    # changed from return 'do some magic!'
-    return device_glue.connect(transportType, connectionString, caCertificate)
+    return 'do some magic!'
 
 
 def device_disconnect(connectionId):  # noqa: E501
@@ -40,8 +36,7 @@ def device_disconnect(connectionId):  # noqa: E501
 
     :rtype: None
     """
-    # changed from return 'do some magic!'
-    device_glue.disconnect(connectionId)
+    return 'do some magic!'
 
 
 def device_enable_c2d_messages(connectionId):  # noqa: E501
@@ -54,8 +49,7 @@ def device_enable_c2d_messages(connectionId):  # noqa: E501
 
     :rtype: None
     """
-    # changed from return 'do some magic!'
-    device_glue.enable_c2d(connectionId)
+    return 'do some magic!'
 
 
 def device_enable_methods(connectionId):  # noqa: E501
@@ -68,8 +62,7 @@ def device_enable_methods(connectionId):  # noqa: E501
 
     :rtype: None
     """
-    # changed from return 'do some magic!'
-    device_glue.enable_methods(connectionId)
+    return 'do some magic!'
 
 
 def device_enable_twin(connectionId):  # noqa: E501
@@ -82,9 +75,21 @@ def device_enable_twin(connectionId):  # noqa: E501
 
     :rtype: None
     """
-    # changed from return 'do some magic!'
-    device_glue.enable_twin(connectionId)
-    
+    return 'do some magic!'
+
+
+def device_get_connection_status(connectionId):  # noqa: E501
+    """get the current connection status
+
+     # noqa: E501
+
+    :param connectionId: Id for the connection
+    :type connectionId: str
+
+    :rtype: object
+    """
+    return 'do some magic!'
+
 
 def device_get_twin(connectionId):  # noqa: E501
     """Get the device twin
@@ -96,8 +101,7 @@ def device_get_twin(connectionId):  # noqa: E501
 
     :rtype: object
     """
-    # changed from return 'do some magic!'
-    return device_glue.get_twin(connectionId)
+    return 'do some magic!'
 
 
 def device_patch_twin(connectionId, props):  # noqa: E501
@@ -112,8 +116,7 @@ def device_patch_twin(connectionId, props):  # noqa: E501
 
     :rtype: None
     """
-    # changed from return 'do some magic!'
-    device_glue.send_twin_patch(connectionId, props)
+    return 'do some magic!'
 
 
 def device_roundtrip_method_call(connectionId, methodName, requestAndResponse):  # noqa: E501
@@ -132,10 +135,7 @@ def device_roundtrip_method_call(connectionId, methodName, requestAndResponse): 
     """
     if connexion.request.is_json:
         requestAndResponse = RoundtripMethodCallBody.from_dict(connexion.request.get_json())  # noqa: E501
-    # changed from return 'do some magic!'
-    return device_glue.roundtrip_method_call(
-        connectionId, methodName, requestAndResponse
-    )
+    return 'do some magic!'
 
 
 def device_send_event(connectionId, eventBody):  # noqa: E501
@@ -150,8 +150,7 @@ def device_send_event(connectionId, eventBody):  # noqa: E501
 
     :rtype: None
     """
-    # changed from return 'do some magic!'
-    device_glue.send_event(connectionId, eventBody)
+    return 'do some magic!'
 
 
 def device_wait_for_c2d_message(connectionId):  # noqa: E501
@@ -164,8 +163,20 @@ def device_wait_for_c2d_message(connectionId):  # noqa: E501
 
     :rtype: str
     """
-    # changed from return 'do some magic!'
-    return device_glue.wait_for_c2d_message(connectionId)
+    return 'do some magic!'
+
+
+def device_wait_for_connection_status_change(connectionId):  # noqa: E501
+    """wait for the current connection status to change and return the changed status
+
+     # noqa: E501
+
+    :param connectionId: Id for the connection
+    :type connectionId: str
+
+    :rtype: object
+    """
+    return 'do some magic!'
 
 
 def device_wait_for_desired_properties_patch(connectionId):  # noqa: E501
@@ -178,5 +189,4 @@ def device_wait_for_desired_properties_patch(connectionId):  # noqa: E501
 
     :rtype: object
     """
-    # changed from return 'do some magic!'
-    return device_glue.wait_for_desired_property_patch(connectionId)
+    return 'do some magic!'
