# ci-wrappers/pythonpreview/wrapper/swagger_server/controllers/module_controller.py
@@ -6,10 +6,6 @@ from swagger_server.models.connect_response import ConnectResponse  # noqa: E501
 from swagger_server.models.roundtrip_method_call_body import RoundtripMethodCallBody  # noqa: E501
 from swagger_server import util
 
-# added 2 lines in merge
-from module_glue import ModuleGlue
-module_glue = ModuleGlue()
-
 
 def module_connect(transportType, connectionString, caCertificate=None):  # noqa: E501
     """Connect to the azure IoT Hub as a module
@@ -27,8 +23,7 @@ def module_connect(transportType, connectionString, caCertificate=None):  # noqa
     """
     if connexion.request.is_json:
         caCertificate = Certificate.from_dict(connexion.request.get_json())  # noqa: E501
-    # changed from return 'do some magic!'
-    return module_glue.connect(transportType, connectionString, caCertificate)
+    return 'do some magic!'
 
 
 def module_connect_from_environment(transportType):  # noqa: E501
@@ -41,8 +36,7 @@ def module_connect_from_environment(transportType):  # noqa: E501
 
     :rtype: ConnectResponse
     """
-    # changed from return 'do some magic!'
-    return module_glue.connect_from_environment(transportType)
+    return 'do some magic!'
 
 
 def module_disconnect(connectionId):  # noqa: E501
@@ -55,8 +49,7 @@ def module_disconnect(connectionId):  # noqa: E501
 
     :rtype: None
     """
-    # changed from return 'do some magic!'
-    module_glue.disconnect(connectionId)
+    return 'do some magic!'
 
 
 def module_enable_input_messages(connectionId):  # noqa: E501
@@ -69,8 +62,7 @@ def module_enable_input_messages(connectionId):  # noqa: E501
 
     :rtype: None
     """
-    # changed from return 'do some magic!'
-    module_glue.enable_input_messages(connectionId)
+    return 'do some magic!'
 
 
 def module_enable_methods(connectionId):  # noqa: E501
@@ -83,8 +75,7 @@ def module_enable_methods(connectionId):  # noqa: E501
 
     :rtype: None
     """
-    # changed from return 'do some magic!'
-    module_glue.enable_methods(connectionId)
+    return 'do some magic!'
 
 
 def module_enable_twin(connectionId):  # noqa: E501
@@ -97,8 +88,20 @@ def module_enable_twin(connectionId):  # noqa: E501
 
     :rtype: None
     """
-    # changed from return 'do some magic!'
-    module_glue.enable_twin(connectionId)
+    return 'do some magic!'
+
+
+def module_get_connection_status(connectionId):  # noqa: E501
+    """get the current connection status
+
+     # noqa: E501
+
+    :param connectionId: Id for the connection
+    :type connectionId: str
+
+    :rtype: object
+    """
+    return 'do some magic!'
 
 
 def module_get_twin(connectionId):  # noqa: E501
@@ -111,8 +114,7 @@ def module_get_twin(connectionId):  # noqa: E501
 
     :rtype: object
     """
-    # changed from return 'do some magic!'
-    return module_glue.get_twin(connectionId)
+    return 'do some magic!'
 
 
 def module_invoke_device_method(connectionId, deviceId, methodInvokeParameters):  # noqa: E501
@@ -129,11 +131,7 @@ def module_invoke_device_method(connectionId, deviceId, methodInvokeParameters):
 
     :rtype: object
     """
-    # changed from return 'do some magic!'
-    return module_glue.invoke_device_method(
-        connectionId, deviceId, methodInvokeParameters
-    )
-
+    return 'do some magic!'
 
 
 def module_invoke_module_method(connectionId, deviceId, moduleId, methodInvokeParameters):  # noqa: E501
@@ -152,10 +150,7 @@ def module_invoke_module_method(connectionId, deviceId, moduleId, methodInvokePa
 
     :rtype: object
     """
-    # changed from return 'do some magic!'
-    return module_glue.invoke_module_method(
-        connectionId, deviceId, moduleId, methodInvokeParameters
-    )
+    return 'do some magic!'
 
 
 def module_patch_twin(connectionId, props):  # noqa: E501
@@ -170,8 +165,7 @@ def module_patch_twin(connectionId, props):  # noqa: E501
 
     :rtype: None
     """
-    # changed from return 'do some magic!'
-    return module_glue.send_twin_patch(connectionId, props)
+    return 'do some magic!'
 
 
 def module_roundtrip_method_call(connectionId, methodName, requestAndResponse):  # noqa: E501
@@ -190,10 +184,7 @@ def module_roundtrip_method_call(connectionId, methodName, requestAndResponse): 
     """
     if connexion.request.is_json:
         requestAndResponse = RoundtripMethodCallBody.from_dict(connexion.request.get_json())  # noqa: E501
-    # changed from return 'do some magic!'
-    return module_glue.roundtrip_method_call(
-        connectionId, methodName, requestAndResponse
-    )
+    return 'do some magic!'
 
 
 def module_send_event(connectionId, eventBody):  # noqa: E501
@@ -208,8 +199,7 @@ def module_send_event(connectionId, eventBody):  # noqa: E501
 
     :rtype: None
     """
-    # changed from return 'do some magic!'
-    module_glue.send_event(connectionId, eventBody)
+    return 'do some magic!'
 
 
 def module_send_output_event(connectionId, outputName, eventBody):  # noqa: E501
@@ -226,8 +216,20 @@ def module_send_output_event(connectionId, outputName, eventBody):  # noqa: E501
 
     :rtype: None
     """
-    # changed from return 'do some magic!'
-    module_glue.send_output_event(connectionId, outputName, eventBody)
+    return 'do some magic!'
+
+
+def module_wait_for_connection_status_change(connectionId):  # noqa: E501
+    """wait for the current connection status to change and return the changed status
+
+     # noqa: E501
+
+    :param connectionId: Id for the connection
+    :type connectionId: str
+
+    :rtype: object
+    """
+    return 'do some magic!'
 
 
 def module_wait_for_desired_properties_patch(connectionId):  # noqa: E501
@@ -240,8 +242,7 @@ def module_wait_for_desired_properties_patch(connectionId):  # noqa: E501
 
     :rtype: object
     """
-    # changed from return 'do some magic!'
-    return module_glue.wait_for_desired_property_patch(connectionId)
+    return 'do some magic!'
 
 
 def module_wait_for_input_message(connectionId, inputName):  # noqa: E501
@@ -256,5 +257,4 @@ def module_wait_for_input_message(connectionId, inputName):  # noqa: E501
 
     :rtype: str
     """
-    # changed from return 'do some magic!'
-    return module_glue.wait_for_input_message(connectionId, inputName)
+    return 'do some magic!'
